<resources>
    <string name="app_name">默纳克调试软件</string>
    <string name="app_abbreviation_name">Inovance</string>
    <string name="title_activity_container">主页</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_core">汇川</string>
    <string name="title_activity_failure">故障</string>
    <string name="title_activity_index">首页</string>
    <string name="title_activity_transaction">调试</string>
    <string name="title_activity_parameter_group">参数</string>
    <string name="action_settings">设置</string>
    <string name="restore_factory">恢复出厂设置</string>
    <string name="label_txt_name">名称</string>
    <string name="label_txt_code">功能码</string>
    <string name="label_txt_productId">id</string>
    <string name="label_txt_value">值</string>
    <string name="label_txt_type">种类</string>
    <string name="label_txt_mode">★</string>
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="error_no_data_received">没有数据！</string>
    <string name="are_you_sure_exit">确定要退出吗？</string>
    <string name="are_you_sure_message">确认退出</string>
    <string name="label_txt_error_code">故障码:</string>
    <string name="label_txt_error_name">故障名称:</string>
    <string name="label_txt_error_level">故障级别:</string>
    <string name="label_txt_error_reason">故障原因</string>
    <string name="label_txt_error_solution">故障解决方案</string>
    <string name="label_txt_failure_dictionary_search">搜索</string>
    <string name="registration_code_text">注册码</string>
    <string name="init_data_wait_text">初始化数据中，请稍后…</string>
    <string name="data_error_text">错误</string>
    <string name="download_text">提取</string>
    <string name="login_text">登陆</string>
    <string name="sign_up_text">注册</string>
    <string name="retry_connect_device">重试</string>
    <string name="connect_server_timeout">服务器连接超时</string>
    <string name="normal_device_text">标准设备</string>
    <string name="check_parameter_data_update_text">正在检查设备参数更新，请稍后。</string>
    <string name="update_parameter_data_wait_message">更新数据中</string>
    <string name="check_parameter_failed_use_local_parameter_message">检查设备参数更新失败，调用本地数据。</string>
    <string name="check_parameter_failed_message">检查设备参数更新失败，请检查网络连接更新参数。</string>
    <string name="recognise_device_wait_text">正在识别设备，请稍后。</string>
    <string name="recognise_device_failed_text">未能识别设备，请尝试其他设备。</string>
    <string name="code_parse_error_tips">内部数据出错，请联系管理员。</string>
    <string name="cannot_restore_elevator_factory">电梯处于运行状态，无法恢复出厂设置。</string>
    <string name="choice_device_sync_or_async_title">选择同步或者异步</string>
    <string-array name="choice_device_sync_or_async_option_array">
        <item>同步</item>
        <item>异步</item>
    </string-array>
    <string name="exit_whole_application">退出</string>
    <string name="bluetooth_connect_exception_title">蓝牙设备异常</string>
    <string name="bluetooth_connect_exception_message">蓝牙设备连接异常，请选择是否重试。</string>
    <string name="view_detail_text">查看详细-></string>
    <string name="read_data_error">读取列表信息错误</string>
    <string name="get_bluetooth_address_error">请打开蓝牙，以便获取蓝牙硬件地址。</string>
    <string name="current_network_not_available">当前网络连接不可用</string>
    <string name="search_device_tips_text">点击按钮搜索设备</string>
    <string name="searching_device_text">正在搜索蓝牙设备</string>
    <string name="found_none_device_text">未搜索到设备，请重新搜索</string>
    <string name="always_open_text">常开</string>
    <string name="always_close_text">常闭</string>
    <string name="write_parameter_successful">参数写入成功</string>
    <string-array name="status_text_array">
        <item>有效</item>
        <item>无效</item>
    </string-array>
    <string name="restore_factory_successful">恢复出厂参数成功</string>
    <string name="restore_factory_failed">恢复出厂参数失败</string>
    <string name="call_inside_failed_text">内召楼层失败</string>
    <string name="call_outside_failed_text">外召楼层失败</string>
    <string name="company_name_text">汇川技术股份有限公司</string>
    <string name="company_description_text">高效产业 · 清洁能源 · 美好生活</string>
    <string name="company_copyright_text">Copyright ©2004</string>
    <string name="new_value_over_max">设置的新值不符号范围</string>
    <string name="write_failed_text">写入失败，请尝试重新写入。</string>
    <string name="choose_device_tips_text">选择需要连接的设备</string>
    <string name="research_text">重新搜索</string>
    <string name="not_connect_device_error">当前未连接设备，无法获取数据！</string>
    <string name="focus_to_scan_text">对焦扫描</string>
    <string name="restart_scan_text">继续扫描</string>
    <string name="save_picture_text">保存图片</string>
    <string name="scan_tips_text">扫描条形码中，请稍后…</string>
    <string name="input_cell_phone_number">输入手机号码</string>
    <string name="unauthorized_title">未授权</string>
    <string name="unauthorized_message">该设备未授权！请先注册。</string>
    <string name="no_network_title">无网络</string>
    <string name="setting_network_message">请先设置网络连接并确保网络连接可用</string>
    <string name="exit_application_text">退出</string>
    <string name="setting_network_text">设置网络</string>
    <string name="update_application_text">更新</string>
    <string name="elevator_status_text">电梯状态</string>
    <string name="running_speed_text">运行速度</string>
    <string name="door_status_text">开关门状态</string>
    <string name="system_status_text">运行模式</string>
    <string name="lock_elevator_status_text">门机状态</string>
    <string name="error_code_text">当前故障</string>
    <string name="home_no_error_text">无</string>
    <string name="choice_device_type_title">选择设备型号</string>
    <string name="choice_operation_title">请选择调试类型</string>
    <string-array name="device_operation_array">
        <item>参数调试</item>
        <item>电梯烧录</item>
    </string-array>
    <string name="register_user_text">用户注册</string>
    <string name="user_name_text">用户名</string>
    <string name="company_text">公司</string>
    <string name="cell_phone_text">移动电话</string>
    <string name="tel_phone_text">办公电话</string>
    <string name="email_text">邮箱</string>
    <string name="submit_text">提交</string>
    <string name="verify_user_text">验证中…</string>
    <string name="field_require_hint">必填</string>
    <string name="user_name_error">用户名长度不符合要求最大6个字符</string>
    <string name="company_name_error">公司名称必填</string>
    <string name="cellphone_error">移动电话必填</string>
    <string name="email_address_error">邮箱填写错误</string>
    <string name="register_failed_text">提交失败，请重试。</string>
    <string name="regist_successful_wait_text">注册提交成功，请等待审核。</string>
    <string name="internal_register_user_text">内部用户注册</string>
    <string name="internal_username">用户姓名</string>
    <string name="internal_number">工号</string>
    <string name="internal_cellphone">手机</string>
    <string name="internal_department">部门</string>
    <string name="internal_email">邮箱</string>
    <string name="internal_remark">备注</string>
    <string name="internal_validate_username_error">用户名长度不符合要求最大20个字符</string>
    <string name="internal_validate_number_error">工号必填</string>
    <string name="internal_validate_cellphone_error">手机号必填</string>
    <string name="internal_validate_department_error">部门名称必填</string>
    <string name="internal_validate_email_error">邮箱必填</string>
    <string name="select_device_type_text">选择设备型号</string>
    <string name="cannot_match_device_text">未能自动匹配当前连接的设备型号，请手动选择设备型号。</string>
    <string name="no_error_text">当前未发生故障</string>
    <string name="view_error_status_text">查看故障详细信息</string>
    <string name="restore_error_status_text">故障复位</string>
    <string name="restore_error_successful_text">故障复位成功</string>
    <string name="history_error_code">故障码</string>
    <string name="history_error_floor">故障楼层</string>
    <string name="history_error_date">故障时间</string>
    <string name="no_history_error_text">无历史故障</string>
    <string-array name="trouble_group_name">
        <item>第1次故障信息</item>
        <item>第2次故障信息</item>
        <item>第3次故障信息</item>
        <item>第4次故障信息</item>
        <item>第5次故障信息</item>
        <item>第6次故障信息</item>
        <item>第7次故障信息</item>
        <item>第8次故障信息</item>
        <item>第9次故障信息</item>
        <item>第10次故障信息</item>
        <item>最后一次故障信息</item>
    </string-array>
    <string name="not_found_record_program">未发现录音程序</string>
    <string name="not_found_video_program">未发现录像程序</string>
    <string name="search_hint_text">输入故障码查询</string>
    <string name="no_error_code_result">未查询到结果</string>
    <string-array name="preference_array">
        <item>程序设置</item>
        <item>快捷菜单设置</item>
        <item>软件更新</item>

        <item>工具</item>
        <item>扫描条形码</item>
        <item>远程协助</item>
        <item>解锁设备</item>

        <item>其他</item>
        <item>日志</item>
        <item>关于</item>
    </string-array>
    <string name="check_application_update_text">正在检查更新</string>
    <string name="bluetooth_address_text">蓝牙地址</string>
    <string name="current_connected_device_name_text">当前连接设备名称</string>
    <string name="current_connected_device_address_text">当前连接设备蓝牙地址</string>
    <string name="no_connected_device">当前未连接设备</string>
    <string name="installed_last_application_text">当前软件为最新版本，无需更新。</string>
    <string name="remote_help_text">远程协助</string>
    <string name="login_wait_text">用户登录中，请稍后！</string>
    <string name="scan_barcode_text">扫描条形码码</string>
    <string name="shortcut_setting_text">快捷菜单设置</string>
    <string name="add_shortcut_dialog_title_text">新增快捷菜单</string>
    <string name="edit_shortcut_dialog_title_text">编辑快捷菜单</string>
    <string name="shortcut_name_text">快捷菜单名称</string>
    <string name="shortcut_action_text">快捷动作</string>
    <string name="shortcut_item_operation_title_text">选择操作</string>
    <string-array name="operation_item">
        <item>编辑</item>
        <item>删除</item>
    </string-array>
    <string name="confirm_delete_title_text">确认删除</string>
    <string name="confirm_delete_message_text">确认删除该快捷菜单吗？</string>
    <string name="about_text">关于</string>
    <string name="call_inside_text">内召</string>
    <string name="call_outside_text">外召</string>
    <string name="open_door_text">开门</string>
    <string name="close_door_text">关门</string>
    <string name="get_floor_text">正在获取楼层信息</string>
    <string name="open_camera_text">打开相机</string>
    <string name="scan_result_text">扫描结果：</string>
    <string name="choose_bluetooth_device">选择蓝牙设备…</string>
    <string name="save_barcode_picture_successful_text">图片已保存</string>
    <string name="cannot_upload_profile_title">无法上传</string>
    <string name="elevator_running_cannot_upload_message">电梯正在运行，无法上传参数。</string>
    <string name="cannot_download_profile_title">无法读取</string>
    <string name="elevator_running_cannot_download_message">电梯正在运行，无法读取参数。</string>
    <string name="parameter_file_package_text">参数文件包</string>
    <string name="view_button_text">查看</string>
    <string name="upload_button_text">写入</string>
    <string name="delete_button_text">删除</string>
    <string name="profile_version_text">版本</string>
    <string name="profile_file_name_text">文件名</string>
    <string name="profile_create_date_text">日期</string>
    <string name="profile_vendor_name_text">电梯厂家</string>
    <string name="profile_device_type_text">当前设备型号</string>
    <string name="uploading_profile_text">正在写入参数</string>
    <string name="uploading_profile_end">写入结束</string>
    <string name="uploading_profile_complete">全部正确写入！</string>
    <string name="upload_dialog_title">写入参数</string>
    <string name="upload_dialog_message">确定要写入参数吗</string>
    <string name="upload_profile_failed_title">无法上传</string>
    <string name="upload_profile_failed_message">电梯正在运行，无法上传参数。</string>
    <string name="parameter_upload_text">参数写入 (手机 -> 一体机)</string>
    <string name="parameter_download_text">参数读取 (一体机 -> 手机)</string>
    <string name="restore_factory_settings_text">恢复出厂设置</string>
    <string name="current_parameters_version_text">当前参数版本</string>
    <string name="parameters_update_date_text">更新日期</string>
    <string name="unlock_device_password_hint">设备密码</string>
</resources>