<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:minHeight="@dimen/card_cell_height"
        android:background="@drawable/card_view_selector"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <TextView
            android:textColor="#515151"
            android:id="@+id/history_error_code"
            android:text="@string/history_error_code"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:textColor="#515151"
            android:id="@+id/history_error_floor"
            android:text="@string/history_error_floor"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:textColor="#515151"
            android:id="@+id/history_error_date"
            android:text="@string/history_error_date"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
</LinearLayout>