<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 远程协助 -->
    <PreferenceScreen
            android:key="remote_help"
            android:title="@string/remote_help_text"
            android:summary="@null">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.kio.ElevatorControl"
                android:targetClass="com.kio.ElevatorControl.activities.HelpSystemRemoteHelpActivity"/>
    </PreferenceScreen>
    <!-- 应用程序设置 -->
    <PreferenceScreen
            android:key="application_config"
            android:title="@string/application_config_text"
            android:summary="@null">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.kio.ElevatorControl"
                android:targetClass="com.kio.ElevatorControl.activities.HelpSystemApplicationConfigActivity"/>
    </PreferenceScreen>
    <!-- 扫描一维码 -->
    <PreferenceScreen
            android:key="scan_barcode"
            android:title="@string/scan_barcode_text"
            android:summary="@null">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.kio.ElevatorControl"
                android:targetClass="com.kio.ElevatorControl.activities.HelpSystemScanBarcodeActivity"/>
    </PreferenceScreen>
    <!-- 蓝牙地址 -->
    <PreferenceScreen
            android:key="bluetooth_address"
            android:title="@string/bluetooth_address_text"
            android:summary="@null">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.kio.ElevatorControl"
                android:targetClass="com.kio.ElevatorControl.activities.HelpSystemBluetoothAddressActivity"/>
    </PreferenceScreen>
</PreferenceScreen>