<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:context=".LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
        <EditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="16sp"
                android:textColor="#515151"
                android:textColorHint="#767676"
                android:hint="@string/registration_code_text"
                android:layout_gravity="center_horizontal"/>
        <Button
                android:id="@+id/btn_sign_up"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up_text"/>
        <Button
                android:id="@+id/btn_login"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_text"/>
        <LinearLayout
                android:id="@+id/init_data_progress_view"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ProgressBar
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_bar"/>
            <TextView
                    android:text="@string/init_data_wait_text"
                    android:textColor="#727272"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
