<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <LinearLayout
            android:background="#80000000"
            android:gravity="center"
            android:padding="10dp"
            android:minHeight="80dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:gravity="center"
                style="@android:style/TextAppearance"
                android:textColor="#ffffffff"
                android:id="@+id/scan_result_text"
                android:text="@string/scan_tips_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_alignParentBottom="true"
            android:background="#80000000"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <Button
                android:id="@+id/start_scan_button"
                android:layout_alignParentLeft="true"
                android:textColor="#ffffffff"
                android:text="@string/restart_scan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/save_picture_button"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:textColor="#ffffffff"
                android:text="@string/save_picture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>