<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:background="@drawable/card_view_background"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <org.holoeverywhere.widget.TextView
                style="@style/Holo.TextAppearance.Light"
                android:textColor="#515151"
                android:text="@string/profile_file_name_text"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <org.holoeverywhere.widget.TextView
                android:id="@+id/profile_name"
                style="@style/Holo.TextAppearance.Light"
                android:textColor="#878787"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <org.holoeverywhere.widget.TextView
                style="@style/Holo.TextAppearance.Light"
                android:textColor="#515151"
                android:text="@string/profile_create_date_text"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <org.holoeverywhere.widget.TextView
                android:id="@+id/create_date"
                style="@style/Holo.TextAppearance.Light"
                android:textColor="#878787"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
            android:background="@android:drawable/divider_horizontal_bright"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <RelativeLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <org.holoeverywhere.widget.Button
                android:id="@+id/view_button"
                android:background="@drawable/upload_button_selector"
                android:layout_marginRight="10dp"
                android:textColor="#989898"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/view_button_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
        <org.holoeverywhere.widget.Button
                android:id="@+id/upload_button"
                android:background="@drawable/upload_button_selector"
                android:textColor="#989898"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/upload_button_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>
    </RelativeLayout>
</LinearLayout>