<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/TextView09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_txt_error_code"
                    android:textColor="#333333"
                    android:layout_marginRight="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/current_error_help_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7F7F7F"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/TextView07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="#333333"
                    android:text="@string/label_txt_error_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                    android:id="@+id/current_error_help_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7F7F7F"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textColor="#333333"
                    android:text="@string/label_txt_error_level"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                    android:id="@+id/current_error_help_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7F7F7F"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333333"
                    android:text="@string/label_txt_error_reason"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                    android:id="@+id/current_error_help_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7F7F7F"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333333"
                    android:text="@string/label_txt_error_solution"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                    android:id="@+id/current_error_help_solution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#7F7F7F"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>